# Parser

./: .clang-format  CMakeLists.txt  main.cpp
Algorithm/: Algorithm.cpp  Algorithm.h  BoostWrapper.cpp  BoostWrapper.h  StringAlg.cpp  StringAlg.h
App/: FormulaSideBar.cpp  FormulaSideBar.h  FormulaWidget.cpp  FormulaWidget.h  MainWindow.cpp  MainWindow.h  UndoRedoConsumer.cpp  UndoRedoConsumer.h  UndoRedoHandler.cpp  UndoRedoHandler.h
Command/: FormulaChangedCommand.cpp  FormulaChangedCommand.h  NewFormulaWidgetCommand.cpp  NewFormulaWidgetCommand.h  RemoveFormulaWidgetCommand.cpp  RemoveFormulaWidgetCommand.h  SetFormulaTextCommand.cpp  SetFormulaTextCommand.h  SkipFirstRedoCommand.cpp  SkipFirstRedoCommand.h
Parser/: Ast.cpp  Ast.h  ErrorBase.cpp  ErrorBase.h  Formula.cpp  Formula.h  FormulaHeader.cpp  FormulaHeader.h  Number.cpp  Number.h  Numeric.cpp  Numeric.h  Parser.cpp  Parser.h  ParserException.cpp  ParserException.h  Tokenizer.cpp  Tokenizer.h
alg/: BoostWrapper.cpp  BoostWrapper.h  StringAlg.cpp  StringAlg.h  vec.cpp  vec.h
app/: Axes.cpp  Axes.h  CameraManager.cpp  CameraManager.h  CameraWidget.cpp  CameraWidget.h  CentralWidget.cpp  CentralWidget.h  FormulaSideBar.cpp  FormulaSideBar.h  FormulaSurfaceInterface.cpp  FormulaSurfaceInterface.h  FormulaWidget.cpp  FormulaWidget.h  MainWindow.cpp  MainWindow.h  OldCursor.cpp  OldCursor.h  OpenGlWidget.cpp  OpenGlWidget.h  Surface.cpp  Surface.h  SurfaceManager.cpp  SurfaceManager.h  TextEdit.cpp  TextEdit.h  UndoRedoConsumer.cpp  UndoRedoConsumer.h  UndoRedoHandler.cpp  UndoRedoHandler.h
ast/: Ast.cpp  (+68 more)
(+159 files in other folders)
